Corrected some language and spelling errors

--- a/PercentWorkType/README
+++ b/PercentWorkType/README
@@ -1,1 +1,1 @@
-This project is to create a fix funning one work type with a percentage to two work types without creating a serperate time entry.  This will avoid minimums for clients if set and simplify the time entry process.
+This project is to create a fix for split work types by funneling one work type with a percentage to two work types without creating a serperate time entry.  This will avoid minimums for clients if set and simplify the time entry process.
